k8s/homebridge/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homebridge-ingressroute
  namespace: homebridge
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homebridge.home.coredev.uk`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: homebridge
          port: 8581
    - match: Host(`homebridge.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: tinyauth-forwardauth
          namespace: pocket-id
      services:
        - name: homebridge
          port: 8581
  tls:
    secretName: homebridge-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homebridge-redirect
  namespace: homebridge
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`homebridge.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: homebridge
          port: 8581
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: homebridge
spec:
  redirectScheme:
    scheme: https
    permanent: true
